; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/handwired/traveller/keymaps/default/extr_keymap.c_LayerLEDSet.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/handwired/traveller/keymaps/default/extr_keymap.c_LayerLEDSet.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @LayerLEDSet(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  switch i32 %3, label %14 [
    i32 128, label %4
    i32 130, label %6
    i32 131, label %8
    i32 129, label %10
    i32 132, label %12
  ]

4:                                                ; preds = %1
  %5 = call i32 @rgblight_setrgb(i32 0, i32 20, i32 0)
  br label %16

6:                                                ; preds = %1
  %7 = call i32 @rgblight_setrgb(i32 20, i32 0, i32 35)
  br label %16

8:                                                ; preds = %1
  %9 = call i32 @rgblight_setrgb(i32 0, i32 20, i32 20)
  br label %16

10:                                               ; preds = %1
  %11 = call i32 @rgblight_setrgb(i32 25, i32 20, i32 0)
  br label %16

12:                                               ; preds = %1
  %13 = call i32 @rgblight_setrgb(i32 20, i32 0, i32 0)
  br label %16

14:                                               ; preds = %1
  %15 = call i32 @rgblight_setrgb(i32 20, i32 2, i32 20)
  br label %16

16:                                               ; preds = %14, %12, %10, %8, %6, %4
  ret void
}

declare dso_local i32 @rgblight_setrgb(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
